[package]
name = "rust_invaders"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = "0.7"
bevy_prototype_lyon = "0.5.0"
rand = "0.8"
ggrs = "0.9"
structopt = "0.3"
serde = { version = "1.0", features = ["derive"] }
bytemuck = {version = "1.7", features = ["derive"]}
instant = "0.1"

[workspace]
resolver = "2"
