[package]
name = "rust_invaders"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy_asset_loader = "0.8"
bevy = "0.6"
bevy_prototype_lyon = "0.4.0"
bytemuck = {version="1.7.3", features= ["derive"]}
ggrs = { version = "0.9", features=["sync-send"] }
bevy_ggrs = "0.9"
matchbox_socket = { git = "https://github.com/johanhelsing/matchbox", features = ["ggrs-socket"] }
log = "0.4"
rand = "0.4"

[workspace]
resolver = "2"
